tests/machine/x/lua/load_yaml.error
line 24: run error: exit status 1
lua: /workspace/mochi/tests/machine/x/lua/load_yaml.lua:24: ../interpreter/valid/people.yaml: No such file or directory
stack traceback:
	[C]: in function 'error'
	/workspace/mochi/tests/machine/x/lua/load_yaml.lua:24: in function '__load'
	/workspace/mochi/tests/machine/x/lua/load_yaml.lua:68: in main chunk
	[C]: in ?

